package com.oraclejavabot.features.ai.dto;

public class AiTaskApprovalRequestDTO {

    private String fechaLimite;
    private Integer prioridadId;
    private String sprintId;

    public AiTaskApprovalRequestDTO() {}

    public String getFechaLimite() {
        return fechaLimite;
    }

    public void setFechaLimite(String fechaLimite) {
        this.fechaLimite = fechaLimite;
    }

    public Integer getPrioridadId() {
        return prioridadId;
    }

    public void setPrioridadId(Integer prioridadId) {
        this.prioridadId = prioridadId;
    }

    public String getSprintId() {
        return sprintId;
    }

    public void setSprintId(String sprintId) {
        this.sprintId = sprintId;
    }
}
